# recension

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  mkdocs_hooks.py  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  publish.yml
docs/: api.md  cli.md  concepts.md  ecosystem.md  index.md  use-cases.md
docs/examples/: index.md
examples/: build_site.py  classification.py  common.py  context_template.py  skill_file.py
examples/cli/: data.jsonl  run.yaml
examples/webapp/: app.py
examples/webapp/templates/: index.html
recension/: __init__.py  artifact.py  budget.py  cli.py  evalset.py  exceptions.py  leakage.py  objective.py  optimizer.py  proposer.py  record.py  report.py  stats.py
recension/models/: __init__.py  anthropic.py  base.py  gemini.py  mock.py  ollama.py  openai.py
tests/: test_artifact.py  test_budget.py  test_cli.py  test_evalset.py  test_leakage.py  test_models.py  test_objective.py  test_optimizer.py  test_proposer.py  test_record.py  test_report.py  test_stats.py
